# voting-app

./: readme.md  vercel.json
anchor-program/: Anchor.toml  Cargo.toml
anchor-program/programs/vote_app/src/: lib.rs
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  config.js  program-data.js  program-viewer.js  solana.js  ui.js
