[package]
name    = "vote_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "vote_app"

[features]
default       = []
no-entrypoint = []
no-idl        = []
no-log-ix-name = []
cpi           = ["no-entrypoint"]
idl-build     = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }